---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/non-plot/array.ra
---
Main(([], [], [
    Write([String(Array 'a')]),
    Assignment(false, Id(a), Array([Integer(1), Integer(2), Integer(3)])),
    For(BinaryOperation(Lte, Id(i), Integer(2)), [Write([ArrayVal(a, Id(i), None)])], Assignment(false, Id(i), Integer(0))),
    Write([String(Array 'b')]),
    Assignment(false, Id(b), Array([Array([Integer(1), Integer(2), Integer(3)]), Array([Integer(1), Integer(2), Integer(3)])])),
    For(BinaryOperation(Lte, Id(i), Integer(1)), [For(BinaryOperation(Lte, Id(j), Integer(2)), [Write([ArrayVal(b, Id(i), Some(Id(j)))])], Assignment(false, Id(j), Integer(0)))], Assignment(false, Id(i), Integer(0))),
    Write([String(Array 'c')]),
    Assignment(false, Id(c), ArrayDeclaration(Int, 3, None)),
    For(BinaryOperation(Lte, Id(i), Integer(2)), [Assignment(false, ArrayVal(c, Id(i), None), Id(i)), Write([ArrayVal(c, Id(i), None)])], Assignment(false, Id(i), Integer(0))),
    Write([String(Array 'd')]),
    Assignment(false, Id(d), ArrayDeclaration(Int, 2, Some(2))),
    For(BinaryOperation(Lte, Id(i), Integer(1)), [For(BinaryOperation(Lte, Id(j), Integer(1)), [Assignment(false, ArrayVal(d, Id(i), Some(Id(j))), BinaryOperation(Sum, BinaryOperation(Times, Id(i), Integer(2)), Id(j))), Write([ArrayVal(d, Id(i), Some(Id(j)))])], Assignment(false, Id(j), Integer(0)))], Assignment(false, Id(i), Integer(0))),
]))
